Fix footer overlap issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body
 {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  padding-bottom:  80px;
 }
 .footer
 {
